# NekoClaw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  dev.sh  docker-compose.ee.yml  docker-compose.yml  features.yaml  init.sql  package-lock.json  remove_bg.py
admin/: index.html  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx
backend/: .env.example  Dockerfile  requirements.txt
desktop/: MEMORY.md  USER.md  index.html  package-lock.json  package.json  pet.html  tmp_icons.mjs  vite.config.ts
docs/: quick-start.md
nanobot-security-layer/: README.md  pyproject.toml
nekoclaw-artifacts/: build.sh
nekoclaw-backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
nekoclaw-desktop/: README.md  index.html  package-lock.json  package.json
nekoclaw-desktop/src-tauri/: Cargo.toml  tauri.conf.json
nekoclaw-desktop/src-tauri/capabilities/: default.json
nekoclaw-desktop/src-tauri/icons/: README.md
nekoclaw-desktop/src-tauri/src/: lib.rs  main.rs
nekoclaw-llm-proxy/: Dockerfile  README.md  pyproject.toml
nekoclaw-portal/: Dockerfile  index.html  nginx.conf  package.json
nekoclaw-tunnel-bridge/: README.md  pyproject.toml
nekoclaw-tunnel-bridge/src/nekoclaw_tunnel_bridge/: __init__.py  __main__.py  client.py  nanobot_channel.py  zeroclaw_bridge.py
openclaw-channel-dingtalk/: README.md  index.ts  package.json
openclaw-channel-nekoclaw/: README.md  index.ts  openclaw.plugin.json  package.json
openclaw-security-layer/: README.md  index.ts
postgres/: Dockerfile
scripts/: _check_syntax.py  _find_bad_line.py
(+507 files in other folders)
