[project]
name = "nekoclaw-tunnel-bridge"
version = "0.1.0"
description = "NekoClaw tunnel bridge for ZeroClaw and NanoBot runtimes"
requires-python = ">=3.11"
dependencies = ["websockets>=12.0", "httpx>=0.27"]

[project.entry-points."nanobot.channels"]
nekoclaw = "nekoclaw_tunnel_bridge.nanobot_channel:NekoClawyChannel"

[project.scripts]
nekoclaw-tunnel-bridge = "nekoclaw_tunnel_bridge.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
